# dsfr-kit

./: .gitignore  .pre-commit-config.yaml  .prototools  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  components_to_process.txt  debug-indexer.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  turbo.json
.moon/: tasks.yml  toolchain.yml  workspace.yml
.specify/memory/: constitution.md
.storybook/: main.js  preview.js
apps/dsfr-kit/: README.md  pyproject.toml
apps/dsfr-kit/src/dsfr_kit_cli/: main.py
apps/dsfr-kit/src/dsfr_kit_cli/commands/: __init__.py  generate.py  init.py
apps/dsfr-kit/tests/integration/: __init__.py  test_button_browser.py  test_button_generation.py
apps/dsfr-kit/tests/unit/: test_init_command.py
docs/: ast-extraction-strategy.md  cli-generator.md
libs/dsfr-generator/: README.md  pyproject.toml
libs/dsfr-generator/src/dsfr_generator/: config.py
libs/dsfr-generator/src/dsfr_generator/fetcher/: __init__.py  cache.py  github.py
libs/dsfr-generator/src/dsfr_generator/generator/: __init__.py  assets.py  storybook.py  web_component.py
libs/dsfr-generator/src/dsfr_generator/generator/templates/: story.j2  web_component.j2
libs/dsfr-generator/src/dsfr_generator/parsers/: __init__.py  css_parser.py  html_parser.py  js_analyzer.py  scss_parser.py  types.py
libs/dsfr-generator/src/dsfr_generator/token_mapper/: __init__.py  colors.py  spacing.py  tailwind_config.py  typography.py  validator.py
libs/dsfr-generator/src/dsfr_generator/validator/: __init__.py  accessibility.py  rgaa.py
libs/dsfr-generator/tests/: test_assets.py
libs/dsfr-generator/tests/behavioral/: TESTING_BEHAVIORAL.md  test_behavior_analyzer.py
libs/dsfr-generator/tests/fixtures/: README.md  behavior_sample.js
libs/dsfr-generator/tests/integration/: test_js_analyzer.py  test_token_pipeline.py
libs/dsfr-generator/tests/unit/: test_accessibility.py  test_colors.py  test_colors_mapper.py  test_css_parser.py  test_dark_theme.py  test_html_parser.py  test_rgaa.py  test_scss_parser.py  test_spacing_mapper.py  test_tailwind_config.py  test_typography_mapper.py  test_validator.py  test_web_component.py
libs/test/: moon.yml  package.json  pyproject.toml
libs/test/src/dsfr_kit_python_test/: __init__.py
tmp_ast_js/: dsfr-accordion.ts
(+328 files in other folders)
