[project]
name = "dsfr-kit"
version = "0.1.0"
description = "DSFR component library for multiple frameworks"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/*", "libs/*"]

[tool.uv]
dev-dependencies = [
    "dsfr-kit-cli",
    "dsfr-generator",
]

[tool.uv.sources]
dsfr-kit-cli = { workspace = true }
dsfr-generator = { workspace = true }
