[project]
name = "dsfr-kit-cli"
version = "0.1.0"
description = "CLI tool for generating DSFR-compliant web components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "dsfr-generator",
]

[tool.uv.sources]
dsfr-generator = { workspace = true }

[project.scripts]
dsfr-kit = "dsfr_kit.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
