[project]
name = "dsfr-kit-test"
version = "0.1.0"
description = "Test Python package for workspace dependencies"
requires-python = ">=3.12"
dependencies = [
    "dsfr-kit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dsfr_kit_python_test"]

[tool.uv.sources]
dsfr-kit-core = { workspace = true }
